ui fixes on mobile

--- a/src/app/shared/keuze/keuze.component.scss
+++ b/src/app/shared/keuze/keuze.component.scss
@@ -1,3 +1,9 @@
 .btn {
     margin-right: 5px!important;
 }
+
+@media only screen and (max-width: 768px) {
+    .d-flex {
+        flex-direction: row-reverse;
+    }
+}
